--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "eospowerup-ui",
   "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar App",
+  "description": "eospowerup.io",
+  "productName": "eospowerup.io",
   "author": "boid-com",
   "private": true,
   "scripts": {
