--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "anchor-link": "^3.2.3",
+    "anchor-link-browser-transport": "^3.1.3",
     "axios": "^0.21.1",
-    "core-js": "^3.6.5",
-    "quasar": "^1.0.0"
+    "core-js": "^3",
+    "crc-32": "^1.2.0",
+    "eosio-uri": "^0.0.5",
+    "quasar": "^1.0.0",
+    "ual-anchor": "^1.0.5"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
