--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@scatterjs/core": "^2.7.54",
+    "@scatterjs/eosjs2": "^1.5.36",
     "anchor-link": "^3.2.3",
     "anchor-link-browser-transport": "^3.1.3",
     "axios": "^0.21.1",
