--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "core-js": "^3",
     "crc-32": "^1.2.0",
     "eosio-uri": "^0.0.5",
+    "eosjs": "^21.0.3",
     "quasar": "^1.0.0",
     "ual-anchor": "^1.0.5"
   },
